# Jurassic-Gait-Studio

./: README.md  launch_studio.py  pyproject.toml  requirements.txt
.studio/: clip_library.json  run_index.json
database/bird_clips/: emu_01.csv  ostrich_01.csv
database/bird_species/: chicken.json  emu.json  ostrich.json
database/target_species/: buitreraptor.json  compsognathus.json  eotyrannus.json  heyuannia.json  khaan.json  microraptor.json  ornithomimid_template.json  qianzhousaurus.json  rahonavis.json  theropod_template.json
docs/: open_source_notes.md
jurassic_gait_studio/: __init__.py  paths.py  registry.py  studio.py
jurassic_gait_studio/core/: __init__.py  aliases.py  diagnostics.py  fusion.py  gait.py  geometry.py  io.py  morphology_preview.py  pipeline.py  reconstruction.py  render.py  retarget.py  schema.py  signals.py  training.py
jurassic_gait_studio/ui/: app.py  viewers.py
tests/: test_registry.py
